# KFC

./: .gitignore  Cargo.toml  README.md  coverage.sh
.github/workflow/: tests.yaml
scripts/: analyse_minimizer.py  buckets.py
src/: brrr_minimizers.rs  buckets.rs  cheap_vec.rs  complexity.rs  compute_left_and_right.rs  extended_hyperkmers.rs  hyperkmers_counts.rs  main.rs  minimizer_iter.rs  read_modification.rs  ringbuf.rs  search.rs  subsequence.rs  superkmer.rs  superkmers.rs  superkmers_computation.rs  superkmers_count.rs  two_bits.rs
src/codec/: align_left_iterator.rs  mod.rs  prefix.rs  suffix.rs
src/codec/avx/: mod.rs
src/codec/bmi/: decode.rs  encode.rs  mod.rs  revcomp.rs
src/dump/: bin_dump.rs  mod.rs  plain_text.rs
src/extended_hyperkmers/: cheap_vec.rs  extended_hyperkmers.rs
src/index/: computation.rs  extraction.rs  kmers_iteration.rs  mod.rs  parallel.rs
src/index/components/: hyperkmers_counts.rs  mod.rs  superkmers_count.rs
src/index/components/extended_hyperkmers/: array_of_hyperkmer.rs  cheap_vec.rs  extended_hyperkmers.rs  mod.rs
src/index/components/hyperkmer_parts/: atypical_hyperkmer_parts.rs  mod.rs
src/index/components/hyperkmer_parts/typical_hyperkmer_parts/: chunk_of_hyperkmer_parts.rs  hyperkmer_parts_bucket.rs  mod.rs
src/index/components/hyperkmers_counts/: hyperkmer_metadata.rs  mod.rs
src/index/computation/: cache.rs  lines_iter.rs  mod.rs
src/index/computation/cache/: cache_misere.rs  cached_value.rs  mod.rs
src/index/iterators/: context_iterators.rs  kmers_iterator.rs  mod.rs
src/serde/: bin.rs  kff.rs  mod.rs  plain_text.rs
src/simd/: linearize.rs  linearize_backup.rs  minimizer.rs  mod.rs  nthash.rs  packed.rs
