[package]
name = "kfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
mashmap = "0.1"
thiserror = "1.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
fastxgz = "0.3.0"
ahash = "0.8.11"
num-traits = "0.2.15"
chrono = "0.4.38"
minimizer-queue = "1.2"
simple_logger = "5.0.0"
itertools = "0.13.0"

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
